# Learning

./: README.md
BabylonJs Tutorials/: index.html  package-lock.json  package.json  vite.config.ts
BabylonJs Tutorials/src/: BabylonContainer.ts  (+2 more)
Haskell/: README.md  Type.hs  appendtodo.hs  applicativefunctor.hs  baby.hs  capslocker.hs  copyfile.hs  deletetodo.hs  girlfriend.hs  helloworld.hs  modules.hs  monoid.hs  palindromes.hs  rpn.hs  shortestpath.hs  shortlinesonly.hs  test.hs  todo.hs  words.txt
Learn You Some Erlang/: dolphins.beam  dolphins.erl  exceptions.beam  exceptions.erl  functions.erl  hhfuns.beam  hhfuns.erl  records.beam  records.erl  records.hrl  recursive.beam  recursive.erl  useless.beam
Learn You a Haskell for Great Good/: 00-readme.ipynb  01-start.ipynb  02-type.ipynb  03-function.ipynb  04-recurse.ipynb  05-higher-order-function.ipynb  06-module.ipynb  07-type-and-typeclass.ipynb  08-input-output.ipynb  09-input-output-2.ipynb  10-functional-solving.ipynb  11-applicative-functor.ipynb  12-monoid.ipynb  13-monad.ipynb  14-more-monad.ipynb  15-zipper.ipynb  Geometry.dyn_hi  Geometry.dyn_o  Geometry.hi  Geometry.hs  Shapes.hs  readme.ipynb  run.ps1
The Rust Programming Language - 2nd Try/ch14_build-profiles/: Cargo.toml
The Rust Programming Language - 2nd Try/ch14_publish-crate/: Cargo.toml  README.md
The Rust Programming Language - 2nd Try/ch14_publish-crate/src/: lib.rs  main.rs
WGSL Tutorials/: README.md
[wip] Learn You Some Erlang/: functions.beam  hhfuns.erl  records.beam  tree.erl  useless.erl  what_the_if.beam  what_the_if.erl
(+515 files in other folders)
