[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# opt-level = 0 # (default, unoptimized + debugInfo)
# opt-level = 1 # optimized + debugInfo
opt-level = 2 # optimized + debugInfo
# check more opt-level info at https://doc.rust-lang.org/cargo/reference/profiles.html

[profile.release]
opt-level = 3 #(default, slow and powerful)

[dependencies]
