[package]
name = "dontuse-this-002"
version = "0.1.1"
edition = "2021"
description = "i want to be a paided rust programmer!"
repository = "https://github.com/naramdash/learning"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
